--- a/404.html
+++ b/404.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8" />
     <title>Redirecting...</title>
     <script type="text/javascript">
-      // Redirect to the correct path
+      // Redirect to the correct path if needed
       (function() {
+        var origin = window.location.origin;
+        console.log("Origin: ", origin);
         var pathname = window.location.pathname;
-        var newUrl = window.location.origin + "/schlappich-woodworking-app" + pathname;
-        window.location.replace(newUrl);
+        console.log("Pathname: ", pathname);
+        var newUrl = origin + "/schlappich-woodworking-app" + pathname;
+        console.log("New URL: ", newUrl);
+        if (!window.location.href.includes('/schlappich-woodworking-app' + pathname)) {
+          window.location.replace(newUrl);
+        }
       })();
     </script>
   </head>
