--- a/404.html
+++ b/404.html
@@ -3,15 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>Redirecting...</title>
-    <script type="text/javascript">
-      // Redirect to the correct path if needed
-      (function() {
-        var pathname = window.location.pathname;
-        console.log("Pathname: ", pathname);
-      })();
-    </script>
+    <meta http-equiv="refresh" content="0; url=/schlappich-woodworking-app/" />
   </head>
   <body>
-    <p>Redirecting...</p>
+    <p>If you are not redirected automatically, follow this <a href="/schlappich-woodworking-app/">link</a>.</p>
   </body>
 </html>
